changing the api for contracts issued by the front-end application